--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .body{
-  font-family: "colfax-web", Arial, Helvetica, sans-serif;
+  font-family: "Inter", Arial, Helvetica, sans-serif;
 }
 
 .butt:hover {
